Prevent automatic text size adjustment on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,8 @@ html {
   @media (max-width: 500px) {
     font-size: 16px;
   }
+
+  text-size-adjust: 100%;
 }
 
 $dark-fg-hue: 55;
